mete tag link add

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="Yoomi" />
-  <meta property="og:url" content="https://yoomi-15966.web.app" />
+  <meta property="og:url" content="https://delightful-snickerdoodle-4b1b2f.netlify.app/" />
   <meta property="og:title" content="Meta Tags — Preview, Edit and Generate" />
   <meta property="og:description" content="Next Generation Patient Engagement and RTM Solution✨" />
   <meta property="og:image" content="/mete-icon.webp" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://yoomi-15966.web.app" />
+  <meta property="twitter:url" content="https://delightful-snickerdoodle-4b1b2f.netlify.app/" />
   <meta property="twitter:title" content="Meta Tags — Preview, Edit and Generate" />
   <meta property="twitter:description" content="Next Generation Patient Engagement and RTM Solution✨" />
   <meta property="twitter:image" content="/mete-icon.webp" />
@@ -513,7 +513,8 @@
     </section>
   </main>
   <!-- footer -->
-  <footer class="bg-black">
+  <footer class="bg-black relative ">
+    <img src="./assets/images/svg/footer-left.svg" alt="logo" class="absolute top-1/2 left-0">
     <div class="container px-3 pt-[195px] pb-10 mx-auto">
       <div class="flex flex-wrap ">
         <div class="w-7/12 max-lg:w-full">
