add padding on card section

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
             <div class="flex flex-col">
               <p class="font-semibold leading-[110%] text-6xl text-white text-center max-lg:text-5xl max-md:text-4xl ">
                 50%</p>
-              <p class="leading-[150%] text-xl text-white max-w-[148px] max-sm:text-base mx-auto text-center ">Reduction
+              <p class="leading-[150%] text-xl max-lg:min-w-[144px]  text-white max-w-[148px] max-sm:text-base mx-auto text-center ">Reduction
                 in Pain</p>
             </div>
           </div>
@@ -372,12 +372,12 @@
                 In-Patient Satisfaction</p>
             </div>
           </div>
-          <div class="relative px-[57px] py-[60px] rounded bg-dark-aquamarine ">
+          <div class="relative px-[57px] py-[55px] rounded bg-dark-aquamarine ">
             <img src="./assets/images/svg/card-logo.svg" alt="card-logo" class="absolute bottom-0 right-0">
             <div class="flex flex-col">
               <p class="font-semibold leading-[110%] text-6xl text-white text-center max-lg:text-5xl max-md:text-4xl ">
                 60%</p>
-              <p class="leading-[150%] text-xl text-white max-w-[184px] mx-auto max-sm:text-base text-center ">Faster
+              <p class="leading-[150%] max-lg:min-w-[144px] text-xl text-white max-w-[184px] mx-auto max-sm:text-base text-center ">Faster
                 Recovery</p>
             </div>
           </div>
