add relative and z-index

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
         </div>
     </section>
     <!-- form -->
-    <section class=" px-3 pt-11 max-md:pt-8 max-sm:pt-6 mb-[-107px]">
+    <section class=" px-3 pt-11 relative z-50 max-md:pt-8 max-sm:pt-6 mb-[-107px]">
       <div class="container overflow-hidden rounded-[32px] relative bg-dark-aquamarine">
         <img src="./assets/images/svg/footer-bottom-logo.svg" alt="footer-bottom-logo"
           class="absolute bottom-0 right-0">
@@ -513,7 +513,7 @@
     </section>
   </main>
   <!-- footer -->
-  <footer class="bg-black relative ">
+  <footer class="bg-black   relative ">
     <img src="./assets/images/svg/footer-left.svg" alt="logo" class="absolute top-1/2 left-0">
     <div class="container px-3 pt-[195px] pb-10 mx-auto">
       <div class="flex flex-wrap ">
