add mt-5 on tell tag

--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
   </main>
   <!-- footer -->
   <footer class="bg-black   relative ">
-    <img src="./assets/images/svg/footer-left.svg" alt="logo" class="absolute top-1/2 left-0">
+    <img src="./assets/images/svg/footer-left.svg" alt="logo" class="absolute max-lg:hidden top-1/2 left-0">
     <div class="container px-3 pt-[195px] pb-10 mx-auto">
       <div class="flex flex-wrap ">
         <div class="w-7/12 max-lg:w-full">
@@ -528,7 +528,7 @@
             <img src="./assets/images/svg/mail.svg" alt="mail">
             contact@yoomi.com
           </a>
-          <a class="gap-4 text-white flex mt-4" href="tel:+123456789">
+          <a class="gap-4 text-white flex  max-lg:mb-5 mt-4" href="tel:+123456789">
             <img src="./assets/images/svg/call.svg" alt="call">
             +123 456 789
           </a>
