--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <input
               class="w-[65%] outline-none pl-1 placeholder:text-dark-aquamarine max-sm:placeholder:text-xs font-medium"
               type="email" placeholder="Enter Your Email ">
-            <button class="py-3 px-4 bg-dark-aquamarine text-white font-bold max-sm:text-xs  rounded">Get
+            <button class="py-3 px-4 hover:bg-white hover:text-dark-aquamarine border transition-all duration-300 border-bg-dark-aquamarine bg-dark-aquamarine text-white font-bold max-sm:text-xs  rounded">Get
               Started</button>
           </div>
 
@@ -162,7 +162,7 @@
         <div class="container flex justify-center rounded-[29px]  mt-[-150px]">
           <div class="w-max  relative">
             <img src="./assets/images/webp/hero-section-image.webp"
-              class="relative shadow-container-shadow rounded-[29px] max-w-[1051px]  w-full z-10"
+              class="relative shadow-container-shadow pointer-events-none rounded-[29px] max-w-[1051px]  w-full z-10"
               alt="hero-section-image">
           </div>
         </div>
@@ -212,7 +212,7 @@
                   industry-leading exercise generation tool to create your own exercises that track adherence and form
                   in seconds</p>
               </div>
-              <button class="text-white bg-dark-aquamarine flex max-w-[164px] mt-9  hover:bg-white hover:text-dark-aquamarine py-4 px-[18px] border border-dark-aquamarine rounded">View the Library</button>
+              <button class="text-white bg-dark-aquamarine flex max-w-[164px] mt-9  hover:bg-white hover:text-dark-aquamarine py-4 px-[18px] transition-all duration-300  border border-dark-aquamarine rounded">View the Library</button>
             </div>
           </div>
           <div class="w-6/12 relative  max-lg:w-full">
@@ -296,13 +296,13 @@
               </div>
             </div>
             <button
-              class="font-semibold text-white bg-dark-aquamarine hover:text-dark-aquamarine hover:bg-white p-4 px-8 rounded text-base max-sm:text-xs mt-10 max-md:mt-7 max-sm:mt-5">Test
+              class="font-semibold text-white bg-dark-aquamarine border-bg-dark-aquamarine  border transition-all duration-300 hover:text-dark-aquamarine hover:bg-white p-4 px-8 rounded text-base max-sm:text-xs mt-10 max-md:mt-7 max-sm:mt-5">Test
               it Yourself</button>
           </div>
         </div>
       </div>
       <img src="./assets/images/svg/hero-section-logo.svg" alt="hero-section-logo"
-        class="absolute bottom-[-26%] max-w-[303px] w-full right-[-0]">
+        class="absolute pointer-events-none bottom-[-26%] max-w-[303px] w-full right-[-0]">
     </section>
     <!--  Reporting  -->
     <section class="pt-12 pb-24 max-lg:mb-16 max-md:mb-12 max-sm:mb-6 max-md:pb-12 max-sm:pb-6 ">
@@ -499,7 +499,7 @@
                 <input
                   class="w-[65%] outline-none pl-1 placeholder:text-dark-aquamarine max-sm:placeholder:text-xs font-medium"
                   type="email" placeholder="Enter Your Email ">
-                <button class="py-3 px-4 bg-dark-aquamarine max-sm:text-xs text-white font-bold rounded">Get
+                <button class="py-3 px-4 hover:bg-white    hover:text-dark-aquamarine border-2 transition-all duration-300 border-bg-dark-aquamarine bg-dark-aquamarine max-sm:text-xs text-white font-bold rounded">Get
                   Started</button>
               </div>
             </div>
