--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
         <img src="./assets/images/svg/her-section-right-logo.svg" alt="hero-section-logo"
           class="absolute  max-sm:w-40 top-[25%] pointer-events-none right-0">
         <img src="./assets/images/svg/grass-1.svg" alt="grass"
-          class="absolute bottom-[-11%] left-[5%] pointer-events-none">
+          class="absolute bottom-[-11%] left-[5%] max-sm:max-w-20 pointer-events-none">
         <img src="./assets/images/svg/grass-2.svg" alt="grass"
-          class="absolute bottom-[-11%] right-[20%] pointer-events-none">
+          class="absolute bottom-[-11%] right-[20%]  max-sm:max-w-12 pointer-events-none">
         <div class="container px-3 pb-[129px] relative mx-auto ">
           <h1
             class="text-[52px] leading-[110%] text-center mx-auto pt-[122px] max-lg:text-5xl  max-md:text-4xl max-sm:text-3xl max-w-[819px]">
@@ -145,7 +145,7 @@
       <div class="bg-dark-aquamarine h-[28px] w-full border-t-2 border-t-carolina-blue border-b-2 border-b-light-grey">
       </div>
       <div class="w-full bg-white">
-        <div class="w-full bg-lily-white min-h-[198px]"></div>
+        <div class="w-full px-3 bg-lily-white min-h-[198px]"></div>
         <div class="container flex justify-center rounded-[29px]  mt-[-150px]">
           <div class="w-max  relative">
             <img src="./assets/images/webp/hero-section-image.webp"
@@ -199,7 +199,7 @@
                   industry-leading exercise generation tool to create your own exercises that track adherence and form
                   in seconds</p>
               </div>
-              <button class="text-white bg-dark-aquamarine flex max-w-[164px] mt-9  hover:bg-white hover:text-dark-aquamarine py-4 px-[18px] transition-all duration-300  border border-transparent hover:border-black rounded">View the Library</button>
+              <button class="text-white bg-dark-aquamarine flex max-w-[164px] mt-9  hover:bg-white hover:text-dark-aquamarine py-4 px-[18px] transition-all duration-300  border border-transparent max-sm:text-xs text-center justify-center items-center hover:border-black rounded">View the Library</button>
             </div>
           </div>
           <div class="w-6/12 relative  max-lg:w-full">
@@ -289,7 +289,7 @@
         </div>
       </div>
       <img src="./assets/images/svg/hero-section-logo.svg" alt="hero-section-logo"
-        class="absolute pointer-events-none bottom-[-26%] max-w-[303px] w-full right-[-0]">
+        class="absolute pointer-events-none bottom-[-26%] max-w-[303px] max-sm:max-w-24  max-sm:bottom-[-9%] w-full right-[-0]">
     </section>
     <!--  Reporting  -->
     <section id="reporting" class="pt-12 pb-24 max-lg:mb-16 max-md:mb-12 max-sm:mb-6 max-md:pb-12 max-sm:pb-6 ">
@@ -308,7 +308,7 @@
               <p class="lg:max-w-[385px] text-gravel mt-5 mb-0.5 text-base max-lg:text-sm max-sm:text-xs ">Track patient
                 progress over time with compliance, pain, RPE, ROM and other key metrics</p>
               <button id="mouse-hover"
-                class="font-semibold mt-9  bg-dark-aquamarine text-white bg-dark-aquamarine hover:text-dark-aquamarine hover:bg-white text-dark-aquamarine rounded border border-solid border-transparent transition-all duration-300 hover:border-black py-4 px-5">View
+                class="font-semibold mt-9 max-sm:text-xs justify-center items-center  bg-dark-aquamarine text-white bg-dark-aquamarine hover:text-dark-aquamarine hover:bg-white text-dark-aquamarine rounded border border-solid border-transparent transition-all duration-300 hover:border-black py-4 px-5">View
                 the Matrics</button>
             </div>
           </div>
@@ -326,8 +326,8 @@
     </section>
     <!-- Through Our Platform -->
     <section class="bg-ghost-white relative max-lg:py-14 max-md:py-12 max-sm:py-6  py-[72px]">
-      <img src="./assets/images/svg/card-top-left.svg" alt="logo" class="absolute top-0 right-0">
-      <div class="max-w-[724px] max-md:px-3 mb-[59px] mx-auto">
+      <img src="./assets/images/svg/card-top-left.svg" alt="logo" class="absolute max-sm:max-w-24 top-0 right-0">
+      <div class="max-w-[724px] relative z-10 max-md:px-3 mb-[59px] mx-auto">
         <p class="text-dark-aquamarine text-center leading-[120%] font-medium text-base max-md:text-sm max-sm:text-xs">
           Platform
         </p>
@@ -427,7 +427,7 @@
           </p>
         </div>
         <div class="container mx-auto px-3">
-          <!-- Slider LG Screen -->
+          <!--Know More big Screen -->
           <div class="max-w-[946px] w-full h-full max-h-[473px] know-more-big-screen mx-auto">
             <div>
               <img class="w-full max-h-[473px] rounded-2xl" src="./assets/images/webp/footer-slider-img-1.webp"
@@ -447,7 +447,7 @@
             </div>
           </div>
 
-          <!-- Slider SM Screen -->
+          <!-- Know More small   Screen -->
           <div class="know-more-small-screen max-w-[790px] mt-9 mx-auto">
             <div>
               <img class="max-w-[152px] min-h-[114px] rounded" src="./assets/images/webp/footer-slider-img-1.webp"
@@ -480,14 +480,14 @@
               <a href="/">
                 <img class="max-sm:max-w-44" src="./assets/images/svg/footer-logo.svg" alt="footer-logo">
               </a>
-              <p class="plus-jakarta-font md:pt-7  leading-[110%] text-[30px] max-md:text-2xl max-sm:text-xl text-white">
+              <p class="plus-jakarta-font md:pt-7  leading-[110%] max-sm:pt-2 text-[30px] max-md:text-2xl max-sm:text-xl text-white">
                 Sign Up to Join <span class="font-semibold"> Our Newsletter </span></p>
               <div
                 class="bg-white mt-12 px-1 rounded marker: flex justify-between py-1.5 max-sm:max-w-[300px] max-sm:mx-auto max-sm:w-full max-w-[428px] ">
                 <input
                   class="w-[65%] outline-none pl-1 placeholder:text-dark-aquamarine max-sm:placeholder:text-xs font-medium"
                   type="email" placeholder="Enter Your Email ">
-                <button class="py-3 px-4 hover:bg-white hover:text-dark-aquamarine hover:border-black border-2 transition-all duration-300 border-bg-dark-aquamarine bg-dark-aquamarine max-sm:text-xs text-white font-bold rounded">Get
+                <button class="py-3 whitespace-nowrap px-4 hover:bg-white hover:text-dark-aquamarine hover:border-black border-2 transition-all duration-300 border-bg-dark-aquamarine bg-dark-aquamarine max-sm:text-xs text-white font-bold rounded">Get
                   Started</button>
               </div>
             </div>
