--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     </section>
     <!-- Extensive Exercise Library Sldier Section  -->
     <section id="amazing-features" class="pb-12 pt-[126px] max-lg:pt-24 max-sm:pt-14 relative">
-      <div class="max-w-[724px] px-3 max-md:mb-0 mb-14 mx-auto">
+      <div class="max-w-[724px] max-sm:mb-5 px-3 max-md:mb-0 mb-14 mx-auto">
         <p class="text-dark-aquamarine text-center font-medium text-base max-md:text-sm max-sm:text-xs">
           Features
         </p>
@@ -327,7 +327,7 @@
     <!-- Through Our Platform -->
     <section class="bg-ghost-white relative max-lg:py-14 max-md:py-12 max-sm:py-6  py-[72px]">
       <img src="./assets/images/svg/card-top-left.svg" alt="logo" class="absolute max-sm:max-w-24 top-0 right-0">
-      <div class="max-w-[724px] relative z-10 max-md:px-3 mb-[59px] mx-auto">
+      <div class="max-w-[724px] relative z-10 max-md:px-3 mb-[59px] max-sm:mb-5 mx-auto">
         <p class="text-dark-aquamarine text-center leading-[120%] font-medium text-base max-md:text-sm max-sm:text-xs">
           Platform
         </p>
@@ -373,7 +373,7 @@
     </section>
     <!-- Recognized by Leading Healthcare Institutions -->
     <section class="pb-12 max-md:pt-12 max-sm:pt-6 max-sm:pb-6 pt-[87px]">
-      <div class="max-w-[684px] max-md:px-3 mb-9 mx-auto">
+      <div class="max-w-[684px] max-md:px-3 max-sm:mb-5 mb-9 mx-auto">
         <p class="text-dark-aquamarine text-center leading-[120%] font-medium text-base max-md:text-sm max-sm:text-xs">
           Partners
         </p>
@@ -416,7 +416,7 @@
     <!--Know More slider  -->
     <section class="py-12 max-md:py-8 max-sm:py-6">
       <div class="container mx-auto px-3">
-        <div class="max-w-[615px] mb-14 mx-auto">
+        <div class="max-w-[615px] max-sm:mb-5 mb-14 mx-auto">
           <p class="text-dark-aquamarine text-center font-medium text-base max-md:text-sm max-sm:text-xs">
             Know More
           </p>
