--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
           <span class="font-semibold"> Healthcare Institutions </span>
         </p>
       </div>
-      <div class="container mx-auto">
+      <div class="container max-lg:px-3 mx-auto">
         <div class="flex flex-wrap justify-center gap-6 ">
           <div
             class="flex min-w-[207px] group min-h-[137px] shadow-card-shadow border border-solid boredr-white-rock rounded justify-center items-center">
